--- a/lab05/requirements.txt
+++ b/lab05/requirements.txt
@@ -1,9 +1,32 @@
 asgiref==3.5.2
+attrs==22.1.0
+certifi==2022.9.24
+charset-normalizer==2.1.1
+coreapi==2.3.3
+coreschema==0.0.4
 Django==4.1.2
 django-filter==22.1
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.2.1
+drf-yasg==1.21.4
+idna==3.4
+inflection==0.5.1
+itypes==1.2.0
+Jinja2==3.1.2
+jsonschema==4.16.0
 Markdown==3.4.1
+MarkupSafe==2.1.1
+packaging==21.3
 PyJWT==2.5.0
+pyparsing==3.0.9
+pyrsistent==0.18.1
 pytz==2022.4
+PyYAML==6.0
+requests==2.28.1
+ruamel.yaml==0.17.21
+ruamel.yaml.clib==0.2.6
+six==1.16.0
 sqlparse==0.4.3
+swagger-spec-validator==2.7.6
+uritemplate==4.1.1
+urllib3==1.26.12
