--- a/lab06/requirements.txt
+++ b/lab06/requirements.txt
@@ -9,6 +9,7 @@ idna==3.4
 oauthlib==3.2.2
 pycparser==2.21
 PyJWT==2.5.0
+python-dotenv==0.21.0
 python3-openid==3.2.0
 requests==2.28.1
 requests-oauthlib==1.3.1
